renderer_opengl1_lib = shared_module(
  'renderer_opengl1',
  'tr_animation.cpp',
  'tr_backend.cpp',
  'tr_bsp.cpp',
  'tr_cmds.cpp',
  'tr_curve.cpp',
  'tr_flares.cpp',
  'tr_image.cpp',
  'tr_init.cpp',
  'tr_light.cpp',
  'tr_main.cpp',
  'tr_marks.cpp',
  'tr_mesh.cpp',
  'tr_model.cpp',
  'tr_model_iqm.cpp',
  'tr_scene.cpp',
  'tr_shade.cpp',
  'tr_shade_calc.cpp',
  'tr_shader.cpp',
  'tr_shadows.cpp',
  'tr_sky.cpp',
  'tr_subs.cpp',
  'tr_surface.cpp',
  'tr_world.cpp',
  sdl_renderercommon_src,
  name_prefix : '',
  cpp_args : tremulous_cflags,
  include_directories : root_srcdir_inc,
  dependencies : renderercommon_dep,
  install : true,
  install_dir : dynlib_dir
)
