subdir( 'glsl' )

renderer_opengl2_lib = shared_module(
  'renderer_opengl2',
  'tr_animation.cpp',
  'tr_backend.cpp',
  'tr_bsp.cpp',
  'tr_cmds.cpp',
  'tr_curve.cpp',
  'tr_dsa.cpp',
  'tr_extensions.cpp',
  'tr_extramath.cpp',
  'tr_fbo.cpp',
  'tr_flares.cpp',
  'tr_glsl.cpp',
  'tr_image.cpp',
  'tr_image_dds.cpp',
  'tr_init.cpp',
  'tr_light.cpp',
  'tr_main.cpp',
  'tr_marks.cpp',
  'tr_mesh.cpp',
  'tr_model.cpp',
  'tr_model_iqm.cpp',
  'tr_postprocess.cpp',
  'tr_scene.cpp',
  'tr_shade.cpp',
  'tr_shade_calc.cpp',
  'tr_shader.cpp',
  'tr_shadows.cpp',
  'tr_sky.cpp',
  'tr_subs.cpp',
  'tr_surface.cpp',
  'tr_vbo.cpp',
  'tr_world.cpp',
  renderergl2_glsl_c,
  name_prefix : '',
  cpp_args : tremulous_cflags,
  include_directories : root_srcdir_inc,
  dependencies : [ renderercommon_dep, nettle_dep ],
  install : true,
  install_dir : dynlib_dir
)
